// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should decrypt note via keys 1`] = `
[
  {
    "author": {
      "email": "Adolph_Wisoky20@yahoo.com",
      "id": "eb1cceb1-0003-4d88-8d14-9f80c3c6db82",
      "name": "Angie Fahey",
    },
    "bookmarked": false,
    "createdAt": "2023-09-22T23:44:31.740Z",
    "deletedAt": undefined,
    "encrypted": false,
    "filePath": [
      "/Network/ick.boz",
      "/selinux/linseed_duh.avi",
    ],
    "id": "6b042125-686a-43e0-8a68-23cf5bee102e",
    "isMy": true,
    "meta": {
      "title": "Test note",
    },
    "touchedAt": "2023-12-31T14:58:04.655Z",
    "updatedAt": "2023-12-31T21:11:56.763Z",
  },
  "#+title: Test note

Body text",
]
`;

exports[`Should encrypt note via keys 1`] = `
{
  "author": {
    "email": "Adolph_Wisoky20@yahoo.com",
    "id": "eb1cceb1-0003-4d88-8d14-9f80c3c6db82",
    "name": "Angie Fahey",
  },
  "bookmarked": false,
  "createdAt": "2023-09-22T23:44:31.740Z",
  "deletedAt": undefined,
  "encrypted": true,
  "filePath": [
    "/Network/ick.boz",
    "/selinux/linseed_duh.avi",
  ],
  "id": "6b042125-686a-43e0-8a68-23cf5bee102e",
  "isMy": true,
  "meta": {
    "id": undefined,
    "published": false,
  },
  "touchedAt": "2023-12-31T14:58:04.655Z",
  "updatedAt": "2023-12-31T21:11:56.763Z",
}
`;
